go module 파일 추가, 블로그 주소 변경

--- a/www/index.html
+++ b/www/index.html
@@ -568,7 +568,7 @@
         <button class="btn" onclick='SaveWork();'>작업 저장하기</button>
         <button class="btn" onclick='LoadWork();'>작업 불러오기</button>
         <button class="btn" id='btn-save-res' onclick='SaveRes();'>XML저장하기</button>
-        <button class="btn" onclick='openWin("https://modu-print.tistory.com");'>홈페이지</button>
+        <button class="btn" onclick='openWin("https://modu-print.com");'>홈페이지</button>
         <button class="btn btn-success"
           onclick='openWin("https://search.naver.com/search.naver?query=%EB%A7%9E%EC%B6%A4%EB%B2%95+%EA%B2%80%EC%82%AC%EA%B8%B0");'>네이버</button>
         <button class="btn" onclick='openWin("https://speller.cs.pusan.ac.kr/");'>나라인포테크</button>
